# YoYoMusic

./: AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-installers.yml
docs/: building.md
docs/skins/: yoyomusic-skin-format.md
docs/superpowers/plans/: 2026-07-05-yoyomusic-autoplay-implementation.md  2026-07-05-yoyomusic-control-console-polish-implementation.md  2026-07-05-yoyomusic-display-window-polish-implementation.md  2026-07-05-yoyomusic-fixed-workbench-ui-implementation.md  2026-07-05-yoyomusic-front-cabin-polish-implementation.md  2026-07-05-yoyomusic-full-implementation.md  2026-07-05-yoyomusic-hardwareized-notice-layer-implementation.md  2026-07-05-yoyomusic-interior-panel-card-polish-implementation.md  2026-07-05-yoyomusic-layout-skins-implementation.md  2026-07-05-yoyomusic-module-compartment-polish-implementation.md  2026-07-05-yoyomusic-native-control-residue-polish-implementation.md  (+7 more)
src/: App.autoplay.test.tsx  App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/services/: artwork.rs  autoplay.rs  enrichment.rs  lyrics.rs  metadata.rs  playback.rs  playlist.rs  settings.rs  shortcuts.rs  skin.rs  tray.rs  window.rs
src-tauri/tests/: lyrics_service.rs  playlist_service.rs  settings_service.rs  skin_service.rs
src/shared/: errors.test.ts  errors.ts  fileDialog.ts  tauri.test.ts  tauri.ts  types.ts  usePlaybackProjection.test.tsx  usePlaybackProjection.ts
src/styles/: app-layout.test.ts  app.css  skin-layouts.css  skin-layouts.test.ts  theme.css
(+50 files in other folders)
