[package]
name = "yoyomusic"
version = "0.1.0"
description = "悠悠乐听跨平台音乐播放器"
authors = ["xyito"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yoyomusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3" }
tauri-plugin-log = "2"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4"] }
