[package]
name = "yoyomusic"
version = "0.1.0"
description = "悠悠乐听跨平台音乐播放器"
authors = ["xyito"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yoyomusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4"] }
rodio = "0.21.1"
lofty = "0.22.2"
sha2 = "0.10.9"
tauri-plugin-http = "2.5.9"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-dialog = "2.7.1"

[dev-dependencies]
tempfile = "3.27.0"
